syntax = "proto3";

package product;

option go_package = "./product";

// product creation
message CreateRequest {
  string Name = 1;
  string Desc = 2;
  uint64 Stock = 3;
  uint64 Amount = 4;
  uint64 Status = 5;
}

message CreateResponse {
  uint64 Id = 1;
}

// product update
message UpdateRequest {
  uint64 Id = 1;
  string Name = 2;
  string Desc = 3;
  uint64 Stock = 4;
  uint64 Amount = 5;
}

message UpdateResponse {}

// product remove
message RemoveRequest {
  uint64 Id = 1;
}

message RemoveResponse {}

// product Detail
message DetailRequest {
  uint64 Id = 1;
}

message DetailResponse {
  uint64 Id = 1;
  string Name = 2;
  string Desc = 3;
  uint64 Stock = 4;
  uint64 Amount = 5;
  uint64 Status = 6;
}

// product list
message ListRequest {
  int64 Page = 1;
  int64 Size = 2;
  string Name = 3;
}

message ListResponse {
  repeated DetailResponse list = 1;
}

service Product {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Remove(RemoveRequest) returns (RemoveResponse);
  rpc Detail(DetailRequest) returns (DetailResponse);
  rpc List(ListRequest) returns (ListResponse);
}
